# singularity-session

./: CONTRIBUTING.md  README.md  meson.build
config/labwc/: rc.xml  themerc
scripts/: install-gdm-config.sh  install-session.sh
src/: singularity-desktop-session  singularity-labwc-session
